# ml4ph

./: README.md  pyproject.toml
src/ml4ph/: __init__.py  bayesian_predictions.py
src/ml4ph/stan/: bayesian_linear_regression.stan  longitudinal_year_model.stan  multi_dim_hsgp_regression.stan
