[project]
name = "ml4ph"
version = "0.1.0"
description = "Machine Learning for Public Health"
authors = [{name = "ohidaoui", email = "ou.hidaoui@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "cmdstanpy",
    "arviz",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml4ph"]

[tool.ruff]
line-length = 88
target-version = "py312"